Fix Contract Reviewer port mapping
- Add missing ports section to docker-compose.yml
- Expose port 7860 for external access
- Contract Reviewer now accessible at http://localhost:7860

--- a/abs-ai-hub/apps/contract-reviewer/docker-compose.yml
+++ b/abs-ai-hub/apps/contract-reviewer/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       # Optional services (app can start them when needed)
       # PARSER_URL: http://parser:8000
       # S3_ENDPOINT: http://minio:9000
+    ports:
+      - "7860:7860"
     networks: [abs-net]
     depends_on:
       - wait-core
