--- a/core/core.yml
+++ b/core/core.yml
@@ -102,6 +102,8 @@ services:
       OPENAI_BASE_URL: http://vllm:8000/v1
       OPENAI_API_KEY: abs-local
       REGISTRY_PATH: /app/registry.json
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     ports: ["8081:8081"]
     depends_on: [redis]
     networks: [abs-net]
