--- a/core/gateway/requirements.txt
+++ b/core/gateway/requirements.txt
@@ -4,3 +4,7 @@ httpx==0.27.2
 pydantic==2.9.2
 redis==5.0.7
 python-dotenv==1.0.1
+sentence-transformers==3.0.1
+psutil==5.9.8
+docker==7.0.0
+websockets==12.0
