Add Onyx AI assistant integration with comprehensive documentation
- Add Onyx service to core/core.yml with full configuration
- Integrate Onyx with Hub Gateway API endpoints (/v1/onyx/*)
- Add Onyx to service registry and auto-wake system
- Update all apps to connect to Onyx service
- Add Onyx to Hub UI with app card and service monitoring
- Create comprehensive documentation suite:
  - Onyx Integration Guide (technical implementation)
  - Onyx Chat User Manual (user interface guide)
  - Onyx Quick Reference (developer quick reference)
- Update README.md with Onyx information and documentation links

Features added:
- Chat interface at http://localhost:8000
- RAG capabilities with document ingestion
- Agent management and execution
- Multi-model support (Ollama/vLLM)
- Auto-wake and service orchestration
- Complete API integration through Hub Gateway

--- a/abs-ai-hub/apps/rag-pdf-voice/docker-compose.yml
+++ b/abs-ai-hub/apps/rag-pdf-voice/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       QDRANT_URL: http://qdrant:6333
       REDIS_URL: redis://redis:6379/0
       LLM_API_BASE: http://ollama:11434
+      ONYX_BASE_URL: http://onyx:8000
       
       # App-specific configuration
       APP_PORT: 8080
@@ -37,5 +38,6 @@ services:
       sh -c "
         until curl -sf http://qdrant:6333/collections >/dev/null; do echo waiting qdrant; sleep 2; done &&
         until curl -sf http://ollama:11434/api/tags >/dev/null; do echo waiting llm; sleep 2; done &&
+        until curl -sf http://onyx:8000/health >/dev/null; do echo waiting onyx; sleep 2; done &&
         echo core ready
       "
