--- a/abs-ai-hub/apps/contract-reviewer/docker-compose.yml
+++ b/abs-ai-hub/apps/contract-reviewer/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       QDRANT_URL: http://qdrant:6333
       REDIS_URL: redis://redis:6379/0
       HUB_GATEWAY_URL: http://hub-gateway:8081
+      ONYX_BASE_URL: http://onyx:8000
 
       # Optional services (app can start them when needed)
       # PARSER_URL: http://parser:8000
@@ -35,5 +36,6 @@ services:
       sh -c "
         until curl -sf http://qdrant:6333/collections >/dev/null; do echo waiting qdrant; sleep 2; done &&
         until curl -sf http://hub-gateway:8081/.well-known/abs-services >/dev/null; do echo waiting hub-gateway; sleep 2; done &&
+        until curl -sf http://onyx:8000/health >/dev/null; do echo waiting onyx; sleep 2; done &&
         echo core ready
       "
