--- a/abs-ai-hub/hub-ui/assets/config.yml
+++ b/abs-ai-hub/hub-ui/assets/config.yml
@@ -7,9 +7,16 @@ core_services:
   ollama: "http://localhost:11434"
   qdrant: "http://localhost:6333"
   redis: "http://localhost:6379"
+  onyx: "http://localhost:8000"
 
 # Applications
 applications:
+  - name: "Onyx AI Assistant"
+    id: "onyx-assistant"
+    url: "http://localhost:8000"
+    icon: "onyx.png"
+    description: "AI assistant with chat interface, RAG capabilities, and agent management"
+  
   - name: "Contract Reviewer"
     id: "contract-reviewer"
     url: "http://localhost:7860"
