Fix Onyx Docker image issue - create custom Onyx service
- Replace non-existent onyxai/onyx:latest with custom build
- Create core/onyx/ directory with Dockerfile and requirements.txt
- Implement custom Onyx AI assistant service with FastAPI
- Add comprehensive Onyx service with chat, RAG, and agent capabilities
- Include health checks and proper error handling
- Support for Ollama and OpenAI/vLLM backends
- Integration with Qdrant vector database and Redis caching
- Built and tested Docker image successfully

Features:
- Chat interface with multiple LLM backends
- RAG queries against vector database
- Document ingestion and processing
- Agent management and execution
- Web UI for service status and API documentation
- Health monitoring and service discovery

--- a/core/core.yml
+++ b/core/core.yml
@@ -95,7 +95,7 @@ services:
 
   # ---- RAG/Agent Engine ----
   onyx:
-    image: onyxai/onyx:latest
+    build: ./onyx
     container_name: abs-onyx
     restart: unless-stopped
     environment:
