Complete Onyx integration with working chat UI
âœ… Fixed Docker image issue - created custom Onyx service
âœ… Added proper chat interface with modern UI design
âœ… Fixed missing HTMLResponse import causing 500 errors
âœ… Integrated Onyx with ABS AI Hub ecosystem

Features:
- Beautiful gradient chat interface with glassmorphism effects
- Real-time chat with typing indicators and smooth animations
- Responsive design for desktop and mobile
- Full integration with Ollama LLM backend
- Error handling and loading states
- Auto-wake service management
- Health monitoring and service discovery

Technical changes:
- Created core/onyx/ directory with Dockerfile and requirements.txt
- Implemented custom Onyx AI assistant service using FastAPI
- Added HTMLResponse import for proper web UI rendering
- Updated core.yml to use custom-built Onyx image
- Integrated with Hub Gateway API endpoints
- Added to Hub UI application registry

The Onyx AI Assistant is now fully operational at http://localhost:8000
with a complete chat interface ready for user interaction.

--- a/core/core.yml
+++ b/core/core.yml
@@ -95,7 +95,7 @@ services:
 
   # ---- RAG/Agent Engine ----
   onyx:
-    build: ./onyx
+    image: abs-onyx-v2
     container_name: abs-onyx
     restart: unless-stopped
     environment:
