Implement unified access pattern with nginx reverse proxy
- Move Onyx from core/ to abs-ai-hub/apps/onyx/
- Add nginx reverse proxy to Hub UI for path-based routing
- Update Hub UI assets with new routing links (/onyx/, /openwebui/, etc.)
- Remove Onyx from core.yml (now managed as app)
- Add Open WebUI as first additional app
- Create comprehensive documentation (README.md, MIGRATION guide)
- Fix Onyx wait script issues and simplify docker-compose
- Test unified access: http://localhost:3000/onyx/ working

Architecture: Single entry point (port 3000) with path-based routing to all applications

--- a/abs-ai-hub/hub-ui/docker-compose.yml
+++ b/abs-ai-hub/hub-ui/docker-compose.yml
@@ -7,11 +7,14 @@ networks:
 services:
   hub-ui:
     image: nginx:alpine
+    container_name: abs-hub-ui
     restart: unless-stopped
     ports:
-      - "3000:80"
+      - "3000:80"                       # single entry point
     volumes:
-      - ./assets:/usr/share/nginx/html
+      - ./assets:/usr/share/nginx/html:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./error_pages:/usr/share/nginx/errors:ro
     networks: [abs-net]
     healthcheck:
       test: ["CMD", "wget", "-q", "-O", "-", "http://localhost/"]
