Fix Hub UI routing: add missing nginx routes for /contract/ and /openwebui/
- Added nginx proxy configuration for /contract/ -> contract reviewer app (port 7860)
- Added nginx proxy configuration for /openwebui/ -> open webui app (port 8080)
- Both routes now properly proxy to their respective applications instead of serving Hub UI
- All routes tested and working: /contract/, /openwebui/, /onyx/, /api/

The Hub UI now correctly routes all application paths to their respective services.

--- a/abs-ai-hub/hub-ui/nginx.conf
+++ b/abs-ai-hub/hub-ui/nginx.conf
@@ -29,6 +29,28 @@ server {
         error_page 502 = /errors/502.html;
     }
 
+    # Proxy for Contract Reviewer App
+    location /contract/ {
+        proxy_pass http://abs-app-contract-reviewer-reviewer-1:7860/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+        error_page 502 = /errors/502.html;
+    }
+
+    # Proxy for Open WebUI
+    location /openwebui/ {
+        proxy_pass http://abs-open-webui:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+        error_page 502 = /errors/502.html;
+    }
+
     # Proxy for Hub Gateway API
     location /api/ {
         proxy_pass http://hub-gateway:8081/;
