--- a/abs-ai-hub/hub-ui/nginx.conf
+++ b/abs-ai-hub/hub-ui/nginx.conf
@@ -47,6 +47,24 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        
+        # Handle static assets properly
+        proxy_buffering off;
+        proxy_cache off;
+        proxy_set_header Accept-Encoding "";
+        
+        # WebSocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
         proxy_redirect off;
         error_page 502 = /errors/502.html;
     }
