Switch to dedicated ports architecture (Option B)
- Removed complex reverse proxy configuration
- Each app now runs on its own dedicated port:
  * Hub UI: http://localhost:3000/
  * Open WebUI: http://localhost:3200/ (moved from 8080)
  * Contract Reviewer: http://localhost:7860/
  * Onyx AI Assistant: http://localhost:8000/
- Updated Hub UI links to point to dedicated ports
- Simplified nginx configuration to serve only Hub UI
- Eliminates MIME type issues and subpath complications
- Each app runs as intended without proxy interference

This approach is much cleaner and avoids all the reverse proxy
complexities that were causing static asset loading issues.

--- a/abs-ai-hub/apps/open-webui/docker-compose.yml
+++ b/abs-ai-hub/apps/open-webui/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     volumes:
       - open-webui-data:/app/backend/data
     ports:
-      - "8080:8080"  # Can be removed if only accessed via Hub UI
+      - "3200:8080"  # Dedicated port for Open WebUI
     networks: [abs-net]
     depends_on:
       wait-core:
