--- a/abs-ai-hub/hub-ui/nginx.conf
+++ b/abs-ai-hub/hub-ui/nginx.conf
@@ -1,5 +1,5 @@
-# ABS AI Hub - Unified Access Pattern (Minimal)
-# Main configuration for routing to applications
+# ABS AI Hub - Simple Hub UI Only
+# Each app runs on its own dedicated port
 
 server {
     listen 80;
@@ -10,63 +10,6 @@ server {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
-    }
-
-    # Proxy for Onyx AI Assistant
-    location /onyx/ {
-        proxy_pass http://onyx:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        # WebSocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_read_timeout 86400; # 24 hours
-        proxy_send_timeout 86400; # 24 hours
-        proxy_redirect off;
-        error_page 502 = /errors/502.html;
-    }
-
-    # Proxy for Contract Reviewer App
-    location /contract/ {
-        proxy_pass http://abs-app-contract-reviewer-reviewer-1:7860/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-        error_page 502 = /errors/502.html;
-    }
-
-    # Proxy for Open WebUI
-    location /openwebui/ {
-        proxy_pass http://abs-open-webui:8080/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        
-        # Handle static assets properly
-        proxy_buffering off;
-        proxy_cache off;
-        proxy_set_header Accept-Encoding "";
-        
-        # WebSocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-        
-        proxy_redirect off;
-        error_page 502 = /errors/502.html;
     }
 
     # Proxy for Hub Gateway API
