Integrate all apps with Hub Gateway and Catalog
- Fix Onyx to use gateway instead of direct LLM calls
  * Forward chat requests to gateway with X-ABS-App-Id header
  * Implement real RAG using gateway for embeddings and chat
  * Add HUB_GATEWAY_URL environment variable
  * Update wait conditions to include gateway dependency

- Create RAG PDF Voice app with full gateway integration
  * New FastAPI app with voice query and document upload endpoints
  * Uses gateway for embeddings, chat, and vector store operations
  * Integrates with Whisper Server for transcription
  * Proper X-ABS-App-Id header usage for policy enforcement
  * Dockerfile and requirements.txt for containerization

- Register Whisper Server properly in catalog
  * Add lifecycle management and endpoint metadata
  * Include in service discovery endpoint
  * Proper service type classification as ASR service

- Update service discovery to include all services
  * Add Whisper Server to /.well-known/abs-services
  * Include Qdrant and Onyx in service discovery

All apps now properly integrate with the control plane architecture!

--- a/abs-ai-hub/apps/onyx/docker-compose.yml
+++ b/abs-ai-hub/apps/onyx/docker-compose.yml
@@ -16,6 +16,7 @@ services:
         until curl -sf http://qdrant:6333/collections >/dev/null; do echo waiting qdrant; sleep 2; done &&
         until curl -sf http://ollama:11434/api/tags >/dev/null; do echo waiting ollama; sleep 2; done &&
         until redis-cli -h redis ping >/dev/null 2>&1; do echo waiting redis; sleep 2; done &&
+        until curl -sf http://hub-gateway:8081/.well-known/abs-services >/dev/null; do echo waiting gateway; sleep 2; done &&
         echo core ready
       "
   
@@ -34,6 +35,7 @@ services:
       QDRANT_URL: http://qdrant:6333
       QDRANT_API_KEY: ""
       REDIS_URL: redis://redis:6379/0
+      HUB_GATEWAY_URL: http://hub-gateway:8081
       # Onyx configuration
       ONYX_PORT: 8000
       ONYX_LOG_LEVEL: info
