--- a/abs-ai-hub/apps/rag-pdf-voice/docker-compose.yml
+++ b/abs-ai-hub/apps/rag-pdf-voice/docker-compose.yml
@@ -9,11 +9,9 @@ services:
     build: .
     restart: unless-stopped
     environment:
-      # Connect to Core Services
-      QDRANT_URL: http://qdrant:6333
-      REDIS_URL: redis://redis:6379/0
-      LLM_API_BASE: http://ollama:11434
-      ONYX_BASE_URL: http://onyx:8000
+      # Connect to Core Services via Gateway
+      HUB_GATEWAY_URL: http://hub-gateway:8081
+      WHISPER_URL: http://whisper-server:8001
       
       # App-specific configuration
       APP_PORT: 8080
@@ -36,8 +34,7 @@ services:
     networks: [abs-net]
     command: >
       sh -c "
-        until curl -sf http://qdrant:6333/collections >/dev/null; do echo waiting qdrant; sleep 2; done &&
-        until curl -sf http://ollama:11434/api/tags >/dev/null; do echo waiting llm; sleep 2; done &&
-        until curl -sf http://onyx:8000/health >/dev/null; do echo waiting onyx; sleep 2; done &&
+        until curl -sf http://hub-gateway:8081/.well-known/abs-services >/dev/null; do echo waiting gateway; sleep 2; done &&
+        until curl -sf http://whisper-server:8001/healthz >/dev/null; do echo waiting whisper; sleep 2; done &&
         echo core ready
       "
