--- a/abs-ai-hub/apps/contract-reviewer/docker-compose.yml
+++ b/abs-ai-hub/apps/contract-reviewer/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     depends_on:
       - wait-core
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:7860/healthz"]
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:7860/healthz').raise_for_status()"]
       interval: 30s
       timeout: 10s
       retries: 3
