AI Hub: model add flow + UI and gateway improvements
UI (hub-ui/assets):
- Allowed Models: include all registered (even not pulled)
- Admin Models: add Pull action wired to gateway
- Overview: show service versions next to names; smaller/lighter style

Gateway (core/gateway/app.py):
- Auto-sync registry aliases on model create/update/delete
- Diagnostics: /admin/config/paths, /admin/registry/flush, /admin/registry/alias
- Service status: include Ollama & Qdrant versions

Core (core.yml):
- Bind-mount catalog.json & registry.json; set CATALOG_PATH/REGISTRY_PATH

--- a/core/core.yml
+++ b/core/core.yml
@@ -15,7 +15,8 @@ services:
   # ---- LLM Runtime (choose ONE) ----
   # A) OLLAMA (default): simple, offline, great for workstation
   ollama:
-    image: ollama/ollama:0.3.8
+    #image: ollama/ollama:0.3.8
+    image: ollama/ollama:latest
     container_name: abs-ollama
     restart: unless-stopped
     runtime: nvidia
@@ -102,8 +103,11 @@ services:
       OPENAI_BASE_URL: http://vllm:8000/v1
       OPENAI_API_KEY: abs-local
       REGISTRY_PATH: /app/registry.json
+      CATALOG_PATH: /app/catalog.json
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./gateway/catalog.json:/app/catalog.json
+      - ./gateway/registry.json:/app/registry.json
     ports: ["8081:8081"]
     depends_on: [redis]
     networks: [abs-net]
