Add Onyx Suite app (full Onyx deployment)
- apps/onyx-suite/docker-compose.yml (exposes 8150 to avoid port conflicts)
- apps/onyx-suite/app.manifest.json
- catalog: register app asset pointing to http://localhost:8150

User can start with: docker compose -f abs-ai-hub/apps/onyx-suite/docker-compose.yml up -d

--- a/abs-ai-hub/apps-registry.json
+++ b/abs-ai-hub/apps-registry.json
@@ -3,6 +3,20 @@
   "description": "ABS AI Hub Applications Registry",
   "applications": [
     {
+      "name": "Legal Assistant",
+      "id": "legal-assistant",
+      "category": "Legal Apps",
+      "description": "Rich legal assistant with chat, RAG, and contract analysis.",
+      "entrypoint": "docker compose up -d",
+      "healthcheck": {
+        "url": "http://localhost:8050/healthz",
+        "expect": "200"
+      },
+      "port": 8050,
+      "icon": "contract-reviewer.png",
+      "path": "apps/legal-assistant"
+    },
+    {
       "name": "Contract Reviewer",
       "id": "contract-reviewer",
       "category": "Legal Apps",
