feat: Integrate PostgreSQL as core service managed by gateway
- Add PostgreSQL service to core/core.yml following established architecture pattern
- Implement comprehensive PostgreSQL health monitoring endpoints (/api/health/postgresql)
- Add PostgreSQL service management endpoints (/api/manage/postgresql)
- Create PostgreSQL metrics collection (/api/metrics/postgresql)
- Implement service discovery for PostgreSQL (/admin/services/discovery)
- Add PostgreSQL to gateway service registry with proper dependencies
- Create complete database schema with tables for documents, analysis results, users, audit logs
- Add PostgreSQL initialization scripts with indexes, triggers, and default admin user
- Update gateway requirements.txt with psycopg2-binary dependency
- Create setup scripts for both Linux/macOS and Windows platforms
- Integrate PostgreSQL status monitoring into existing service status endpoints
- Update catalog.json to include PostgreSQL service metadata

PostgreSQL is now fully integrated as a core service managed by the gateway,
following the same pattern as ollama, qdrant, and redis services.

--- a/core/core.yml
+++ b/core/core.yml
@@ -9,6 +9,7 @@ volumes:
   ollama_models:
   qdrant_storage:
   redis_data:
+  postgres_data:
 
 services:
 
@@ -109,5 +110,33 @@ services:
       - ./gateway/catalog.json:/app/catalog.json
       - ./gateway/registry.json:/app/registry.json
     ports: ["8081:8081"]
-    depends_on: [redis]
+    depends_on: [redis, postgresql]
     networks: [abs-net]
+
+  # ---- Database ----
+  postgresql:
+    image: postgres:15
+    container_name: document-hub-postgres
+    restart: unless-stopped
+    environment:
+      TZ: ${TZ}
+      POSTGRES_DB: document_hub
+      POSTGRES_USER: hub_user
+      POSTGRES_PASSWORD: secure_password
+      POSTGRES_INITDB_ARGS: --encoding=UTF-8 --lc-collate=C --lc-ctype=C
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./gateway/postgres-init:/docker-entrypoint-initdb.d
+    ports:
+      - "5432:5432"
+    networks: [abs-net]
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U hub_user -d document_hub"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    labels:
+      - "abs.service=postgresql"
+      - "abs.managed-by=gateway"
+      - "abs.environment=production"
