feat: Add Contract Reviewer v2 - Professional AI-powered contract analysis platform
- Complete Contract Reviewer v2 application with modern three-panel interface
- Implemented document upload, analysis, and results display functionality
- Added persistent analysis results storage with Redis caching
- Implemented document list pagination with 'Load More' functionality
- Created comprehensive documentation for hybrid storage strategy
- Added PostgreSQL integration planning and architecture documentation
- Implemented proper summary formatting with HTML rendering
- Added analysis result persistence to avoid re-analyzing documents
- Created detailed storage strategy documentation (PostgreSQL, Qdrant, File-based)
- Added cross-platform compatibility documentation for Windows/Ubuntu
- Implemented service discovery and centralized document hub architecture
- Added comprehensive troubleshooting and setup documentation
- Created production deployment guides and database strategy documentation

Contract Reviewer v2 provides a professional-grade contract analysis platform
with modern UI, persistent storage, and comprehensive documentation for
legal organizations requiring batch document processing and analysis.

--- a/abs-ai-hub/apps-registry.json
+++ b/abs-ai-hub/apps-registry.json
@@ -57,6 +57,20 @@
       "port": 8001,
       "icon": "whisper.png",
       "path": "apps/whisper-server"
+    },
+    {
+      "name": "Contract Reviewer v2",
+      "id": "contract-reviewer-v2",
+      "category": "Legal Apps",
+      "description": "Professional AI-powered contract analysis platform with modern three-panel interface.",
+      "entrypoint": "docker compose up -d",
+      "healthcheck": {
+        "url": "http://localhost:8082/healthz",
+        "expect": "200"
+      },
+      "port": 8082,
+      "icon": "contract-reviewer.png",
+      "path": "apps/contract-reviewer-v2"
     }
   ]
 }
