feat: Enhance Contract Reviewer v1 with improved model management and UI
- Add dynamic model selection with gateway integration
- Implement model refresh functionality for LLM and embedding models
- Improve error handling and fallback analysis processing
- Add comprehensive history management with view/delete actions
- Enhance UI with better model status display and configuration
- Fix hub-ui health check to use proper wget spider command
- Improve document processing with better chunking and analysis
- Add data export functionality for reports and history
- Implement proper CORS handling for Gradio integration
- Enhance report management with better error handling

These improvements bring Contract Reviewer v1 up to modern standards
with better model management, improved UI, and enhanced functionality.

--- a/abs-ai-hub/hub-ui/docker-compose.yml
+++ b/abs-ai-hub/hub-ui/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./error_pages:/usr/share/nginx/errors:ro
     networks: [abs-net]
     healthcheck:
-      test: ["CMD", "wget", "-q", "-O", "-", "http://localhost/"]
+      test: ["CMD", "wget", "-q", "--spider", "http://127.0.0.1:80/"]
       interval: 30s
       timeout: 10s
       retries: 3
