feat: Add PostgreSQL to Hub UI admin panel
- Added PostgreSQL to core_services in config.yml
- Added PostgreSQL status card to Overview tab service status grid
- Added PostgreSQL service control card to Services tab with management controls
- Added PostgreSQL metrics display (database size, connections, version)
- Updated JavaScript to handle PostgreSQL status updates and metrics
- PostgreSQL now appears in both Overview and Services tabs of admin panel

PostgreSQL is now fully integrated into the hub UI and visible to users
with complete status monitoring and service management capabilities.

--- a/abs-ai-hub/hub-ui/assets/config.yml
+++ b/abs-ai-hub/hub-ui/assets/config.yml
@@ -7,6 +7,7 @@ core_services:
   ollama: "http://localhost:11434"
   qdrant: "http://localhost:6333"
   redis: "http://localhost:6379"
+  postgresql: "http://localhost:5432"
   onyx: "http://localhost:8000"
 
 # Applications
