Fix document list display issues and implement unified error handling
- Fix frontend document count display (use API total_count instead of loaded count)
- Fix document accumulation issue (use reset=true for initial load)
- Add comprehensive error handling UI for documents with processing errors
- Implement error recovery methods (reprocess, analyze anyway, re-upload)
- Add /api/reprocess/{document_id} endpoint for retrying vector processing
- Enhance backend document validation with better error handling
- Add detailed logging for debugging document loading issues
- Relax document filtering to show all documents including those with errors
- Improve Alpine.js template defensive programming
- Add error status badges and recovery actions in document list
- Show error count in document list header
- Add computed property for documentsWithErrors

Resolves: Document list showing incorrect count (4/4 vs 2/2)
Resolves: Alpine.js x-for loop errors preventing document rendering
Resolves: Missing error recovery functionality for failed documents

--- a/abs-ai-hub/apps/contract-reviewer-v2/docker-compose-host-mount.yml
+++ b/abs-ai-hub/apps/contract-reviewer-v2/docker-compose-host-mount.yml
@@ -1,7 +1,6 @@
-# Contract Reviewer v2 - Single App Deployment
-# This configuration deploys ONLY Contract Reviewer v2 with its own file storage
+# Alternative docker-compose.yml with host directory mounting
+# This version mounts host directories directly for easier data access
 # NOTE: Uses CORE services (Redis, PostgreSQL, Qdrant) managed by gateway
-# LOCATION: abs-ai-hub/apps/contract-reviewer-v2/ (app-specific)
 
 version: '3.8'
 
@@ -35,13 +34,12 @@ services:
       - LOG_LEVEL=INFO
       - ABS_DATA_DIR=/data
     volumes:
-      # File storage for documents, reports, and archives
-      - contract-reviewer-v2-file-storage:/data/file_storage
-      # Legacy data directories for compatibility
-      - contract-reviewer-v2-data:/data/uploads
-      - contract-reviewer-v2-reports:/data/reports
-      - contract-reviewer-v2-templates:/data/templates
-      - contract-reviewer-v2-logs:/data/logs
+      # Mount host directories for direct access
+      - ./data/file_storage:/data/file_storage
+      - ./data/uploads:/data/uploads
+      - ./data/reports:/data/reports
+      - ./data/templates:/data/templates
+      - ./data/logs:/data/logs
       # Static files (read-only)
       - ./static:/app/static:ro
     networks:
@@ -58,19 +56,6 @@ services:
       - "abs.service=contract-reviewer-v2-integrated"
       - "abs.managed-by=gateway"
       - "abs.environment=production"
-
-volumes:
-  # File storage volumes (app-specific)
-  contract-reviewer-v2-file-storage:
-    driver: local
-  contract-reviewer-v2-data:
-    driver: local
-  contract-reviewer-v2-reports:
-    driver: local
-  contract-reviewer-v2-templates:
-    driver: local
-  contract-reviewer-v2-logs:
-    driver: local
 
 networks:
   abs-net:
