feat: implement unified framework with app launcher and header
- Add unified framework JavaScript component with app switching
- Create app registry API endpoint in gateway
- Implement app launcher with waffle icon and search
- Add unified header with model selector and user menu
- Fix Alpine.js component scope and DOM initialization
- Add stub absFramework to prevent first-render errors
- Update Contract Reviewer v2 to use framework
- Add environment configuration for framework paths
- Create comprehensive framework documentation

Key fixes:
- Fixed JavaScript syntax errors in unified-framework.js
- Added Alpine.js component scope with x-data='contractReviewer'
- Implemented Alpine.initTree() for injected DOM subtree
- Added optional chaining for safe template expressions
- Fixed app registry loading order (local first, then fallbacks)
- Resolved absFramework undefined errors with stub approach

The unified framework now provides:
- App launcher with 6 available apps
- Unified header with model selection
- Cross-app navigation capabilities
- Consistent UI/UX across all ABS applications

--- a/abs-ai-hub/apps/contract-reviewer-v2/docker-compose.yml
+++ b/abs-ai-hub/apps/contract-reviewer-v2/docker-compose.yml
@@ -16,6 +16,11 @@ services:
       - APP_PORT=8080
       - HUB_GATEWAY_URL=http://hub-gateway:8081
       
+      # Framework Configuration
+      - ABS_FRAMEWORK_PATH=/static/unified-framework.js
+      - ABS_GATEWAY_URL=http://localhost:8081
+      - ABS_APP_REGISTRY_URL=http://localhost:8081/api/apps
+      
       # Database Configuration - Connect to CORE PostgreSQL service
       - POSTGRES_URL=postgresql://hub_user:secure_password@document-hub-postgres:5432/document_hub
       
