ðŸŽ‰ MAJOR MILESTONE: Implement Centralized Unified Framework Architecture
âœ… Unified Framework Features:
- Centralized framework loading from Hub UI (port 3000)
- App launcher with waffle/grid icon
- Unified top menu across all ABS applications
- Cross-app navigation and switching
- Dynamic app registry loading

âœ… Technical Implementation:
- Framework files centralized in hub-ui/assets/
- Environment variable configuration for flexible deployment
- CORS headers added to Hub UI nginx for cross-origin requests
- Alpine.js integration with proper data extension
- HTML injection and DOM initialization

âœ… Contract Reviewer v2 Integration:
- Removed local framework copies (deleted static/unified-framework.js, static/apps-registry.json)
- Updated framework-config.js to use centralized Hub UI paths
- Fixed backend environment variable defaults
- Updated docker-compose.yml with correct framework URLs

âœ… Architecture Benefits:
- Single source of truth for framework files
- Consistent UI/UX across all ABS applications
- Centralized app registry management
- Easy maintenance and updates
- Scalable framework for future applications

âœ… Files Modified:
- Contract Reviewer v2: app_integrated.py, docker-compose.yml, static/framework-config.js
- Hub UI: assets/unified-framework.js, assets/apps-registry.json, nginx.conf
- Gateway: app.py (removed incorrect static file mount)

This represents a complete transformation from individual app frameworks to a unified, centralized architecture.

--- a/abs-ai-hub/apps/contract-reviewer-v2/docker-compose.yml
+++ b/abs-ai-hub/apps/contract-reviewer-v2/docker-compose.yml
@@ -17,9 +17,9 @@ services:
       - HUB_GATEWAY_URL=http://hub-gateway:8081
       
       # Framework Configuration
-      - ABS_FRAMEWORK_PATH=/static/unified-framework.js
+      - ABS_FRAMEWORK_PATH=http://localhost:3000/unified-framework.js
       - ABS_GATEWAY_URL=http://localhost:8081
-      - ABS_APP_REGISTRY_URL=http://localhost:8081/api/apps
+      - ABS_APP_REGISTRY_URL=http://localhost:3000/apps-registry.json
       
       # Database Configuration - Connect to CORE PostgreSQL service
       - POSTGRES_URL=postgresql://hub_user:secure_password@document-hub-postgres:5432/document_hub
