--- a/abs-ai-hub/hub-ui/nginx.conf
+++ b/abs-ai-hub/hub-ui/nginx.conf
@@ -10,6 +10,12 @@ server {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
+        
+        # Add CORS headers for cross-origin requests from apps
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
     }
 
     # Proxy for Hub Gateway API
