feat: Enhanced Contract Reviewer v2 UI and Operations Console
- Moved Export button from top menu to contextual location beside Re-analyze button
- Removed duplicate Help button from top menu
- Migrated Settings to full-page Operations Console with left sidebar navigation
- Added Overview and Models tabs with comprehensive system information
- Fixed settings route integration with app_integrated.py
- Removed redundant app.py file
- Enhanced unified framework header with blue gradient background
- Made app name/logo clickable to navigate to homepage
- Improved Back to App button visibility and positioning
- Added comprehensive system status and vector database information

--- a/abs-ai-hub/hub-ui/assets/apps-registry.json
+++ b/abs-ai-hub/hub-ui/assets/apps-registry.json
@@ -29,22 +29,9 @@
       "tags": ["contracts", "ai", "analysis", "professional"],
       "permissions": ["read", "write", "export"],
       "config": {
-        "enableExport": true,
+        "enableExport": false,
         "enableSettings": true,
-        "customMenuItems": [
-          {
-            "id": "export",
-            "label": "Export",
-            "icon": "fas fa-download",
-            "action": "exportResults"
-          },
-          {
-            "id": "help",
-            "label": "Help",
-            "icon": "fas fa-question-circle",
-            "action": "showHelp"
-          }
-        ]
+        "customMenuItems": []
       }
     },
     "legal-assistant": {
